refactor:  job and stage handling to improve structure and add stages support
