# src/jobs/controllers/jobController.ts
@@ -114,20 +114,6 @@ export class JobController {
     }
   };
 
-  public addStages: TypedRequestHandlers['POST /jobs/{jobId}/stages'] = async (req, res, next) => {
-    try {
-      const response = await this.manager.addStages(req.params.jobId, req.body);
-
-      return res.status(httpStatus.CREATED).json(response);
-    } catch (err) {
-      if (err instanceof JobNotFoundError) {
-        (err as HttpError).status = httpStatus.NOT_FOUND;
-      }
-
-      return next(err);
-    }
-  };
-
   public deleteJob: TypedRequestHandlers['DELETE /jobs/{jobId}'] = async (req, res, next) => {
     try {
       await this.manager.deleteJob(req.params.jobId);
